--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.1.2",
+    "@vercel/speed-insights": "^1.0.7",
     "classnames": "^2.5.1",
     "next": "14.1.0",
     "react": "^18",
