--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.1.2",
+    "cheerio": "^1.0.0-rc.12",
     "classnames": "^2.5.1",
     "next": "14.1.0",
     "react": "^18",
@@ -19,6 +20,9 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "typescript": "^5"
