Update license from MIT to Apache License 2.0 in LICENSE, package.json, and README.md files to reflect new licensing terms.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "notion-github-tracker",
   "version": "0.2.0",
   "private": true,
+  "license": "Apache-2.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
